--- a/portfolio.html
+++ b/portfolio.html
@@ -63,16 +63,16 @@
     <footer>
         <a href="" class="logo">WebStudio</a>
         <address>
-            <ul>
+            <ul class="contacts">
                 <li>
                     <a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" target="_blank" rel="nofollow noopener noreferrer">г. Киев,
                         пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111" class="phone">+38 099 111 11 11</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:info@example.com" class="mail">info@example.com</a>
                 </li>
             </ul>
         </address>
