--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="./portfolio.html" class="logo">WebStudio</a>
-            <a href="./index.html" class="navigation-link">Студия</a>
-            <a href="./portfolio.html" class="portfolio">Портфолио</a>
-            <a href="./portfolio.html" class="navigation-link">Контакты</a>
+            <a href="./portfolio.html"><span>Web</span>Studio</a>
+            <a href="./index.html">Студия</a>
+            <a href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html">Контакты</a>
         </nav>
         <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
-            <a href="tel.:+380961111111" class="phone">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel.:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
     <main>
@@ -30,39 +30,56 @@
                 <button class="btn-navigation" type="button">Дизайн</button>
                 <button class="btn-navigation" type="button">Маркетинг</button>
             </div>
-            <div class="portfolio-list">
-                <img src="./images/img(9).jpg" alt="Технокряк" width="370" height="294" class="photo">
-                <h2 class="project-name">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
-                <img src="./images/img(1)(1).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" class="photo">
-                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                <p class="project-type">Дизайн</p>
-                <img src="./images/img(2)(1).jpg" alt="Ресторан Seafood" width="370" height="294" class="photo">
-                <h2 class="project-name">Ресторан Seafood</h2>
-                <p class="project-type">Приложение</p>
-                <img src="./images/img(3)(1).jpg" alt="Проект Prime" width="370" height="294" class="photo">
-                <h2 class="project-name">Проект Prime</h2>
-                <p class="project-type">Маркетинг</p>
-                <img src="./images/img(4)(1).jpg" alt="Проект Boxes" width="370" height="294" class="photo">
-                <h2 class="project-name">Проект Boxes</h2>
-                <p class="project-type">Приложение</p>
-                <img src="./images/img(5)(1).jpg" alt="Inspiration has no Borders" width="370" height="294" class="photo">
-                <h2 class="project-name">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
-                <img src="./images/img(6)(1).jpg" alt="Издание Limited Edition" width="370" height="294" class="photo">
-                <h2 class="project-name">Издание Limited Edition</h2>
-                <p class="project-type">Дизайн</p>
-                <img src="./images/img(7)(1).jpg" alt="Проект LAB" width="370" height="294" class="photo">
-                <h2 class="project-name">Проект LAB</h2>
-                <p class="project-type">Маркетинг</p>
-                <img src="./images/img(8)(1).jpg" alt="Growing Business" width="370" height="294" class="photo">
-                <h2 class="project-name">Growing Business</h2>
-                <p class="project-type">Приложение</p>
-            </div>
+            <ul class="portfolio-list">
+                <li>
+                    <img src="./images/img(9).jpg" alt="Технокряк" width="370" height="294">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p></li>
+                <li>
+                    <img src="./images/img(1)(1).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/img(2)(1).jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/img(3)(1).jpg" alt="Проект Prime" width="370" height="294">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/img(4)(1).jpg" alt="Проект Boxes" width="370" height="294">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                        <img src="./images/img(5)(1).jpg" alt="Inspiration has no Borders" width="370" height="294">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                </li>        
+                <li>
+                    <img src="./images/img(6)(1).jpg" alt="Издание Limited Edition" width="370" height="294">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/img(7)(1).jpg" alt="Проект LAB" width="370" height="294">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                        <img src="./images/img(8)(1).jpg" alt="Growing Business" width="370" height="294">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
-        <a href="" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <address>
             <ul class="contacts">
                 <li>
