--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
 <nav class="navigation">
-    <a href="./portfolio.html" class="link" lang="en"><span>Web</span>Studio</a>
-    <a href="./index.html">Студия</a>
-    <a href="./portfolio.html">Портфолио</a>
-    <a href="./portfolio.html">Контакты</a>
+    <a href="./portfolio.html" lang="en"><span class="logo">Web</span>Studio</a>
+    <a href="./index.html" class="link current">Студия</a>
+    <a href="./portfolio.html" class="link">Портфолио</a>
+    <a href="./portfolio.html" class="link">Контакты</a>
 </nav>
-    <div>
+    <div class="contacts">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <a href="tel.:+380961111111">+38 096 111 11 11</a></li>
     </div>
