--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <header>
-<nav class="navigation">
-    <a href="./portfolio.html" lang="en"><span class="logo">Web</span>Studio</a>
-    <a href="./index.html" class="link current">Студия</a>
-    <a href="./portfolio.html" class="link">Портфолио</a>
-    <a href="./portfolio.html" class="link">Контакты</a>
-</nav>
-    <div class="contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <a href="tel.:+380961111111">+38 096 111 11 11</a></li>
-    </div>
+        <div class="container">
+            <nav class="navigation">
+                <a href="./portfolio.html"class="link logo" lang="en"><span class="logo">Web</span>Studio</a>
+                <a href="./index.html" class="link current">Студия</a>
+                <a href="./portfolio.html" class="link">Портфолио</a>
+                <a href="./portfolio.html" class="link contact">Контакты</a>
+            </nav>
+            <div class="contacts">
+            <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <a href="tel.:+380961111111" class="phone">+38 096 111 11 11</a></li></div>
+        </div>
 
     </header>
     <main>
