--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </header>
     <main>
     <!--CTA-->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+        <section class="hero">
+            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
             <button type="button"> Заказать услугу</button>
         </section>
         <section>
