--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <!-- Шапка сайта -->
     <header>
         <div class="container">
             <nav class="navigation">
@@ -25,8 +30,8 @@
     <main>
     <!--CTA-->
         <section class="hero">
-            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button"> Заказать услугу</button>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="button"> Заказать услугу</button>
         </section>
         <section>
             <h2>Скрыть</h2>
