--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="button"> Заказать услугу</button>
         </section>
-        <section>
-            <h2>Скрыть</h2>
-            <ul>
-                <li> <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <section class="portfolio">
+            <h2 class="hidden">Скрыть</h2>
+            <ul class="list">
+                <li> <h3 class="title">Внимание к деталям</h3>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li> <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li> <h3 class="title">Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li> <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li> <h3 class="title">Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="title">Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="works-title">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/1.jpg" alt="Разработка скелета кода" width="370"> </li>
                 <li><img src="./images/2.jpg" alt="Адаптация для мобильных устройств" width="370"> </li>
