--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
         <div class="container">
             <nav class="navigation">
-                <a href="./portfolio.html"class="link logo" lang="en"><span class="logo">Web</span>Studio</a>
-                <a href="./index.html" class="link current">Студия</a>
+                <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
+                <a href="./index.html" class="link">Студия</a>
                 <a href="./portfolio.html" class="link">Портфолио</a>
-                <a href="./portfolio.html" class="link contact">Контакты</a>
+                <a href="./index.html" class="link">Контакты</a>
             </nav>
             <div class="contacts">
             <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-            <a href="tel.:+380961111111" class="phone">+38 096 111 11 11</a></li></div>
+            <a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li></div>
         </div>
 
     </header>
@@ -53,53 +53,49 @@
         </section>
         <section>
             <h2 class="works-title">Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/1.jpg" alt="Разработка скелета кода" width="370"> </li>
-                <li><img src="./images/2.jpg" alt="Адаптация для мобильных устройств" width="370"> </li>
+            <ul class="list">
+                <li><img src="./images/1.jpg" alt="Разработка скелета кода" class="image" width="370"> </li>
+                <li><img src="./images/2.jpg" alt="Адаптация для мобильных устройств" class="image" width="370"> </li>
                 <li><img src="./images/3.jpg" alt="Веб-дизайн" width="370"> </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="team">
+            <h2 class="works-title">Наша команда</h2>
+            <ul class="list">
                 <li>
-                    <img src="./images/4.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <img src="./images/4.jpg" alt="Игорь Демьяненко" class="image" width="270">
+                    <h3 class="team-name">Игорь Демьяненко</h3>
+                    <p class="team-post">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/5.jpg" alt="Ольга Репина" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <img src="./images/5.jpg" alt="Ольга Репина" class="image" width="270">
+                    <h3 class="team-name">Ольга Репина</h3>
+                    <p class="team-post">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/6.jpg" alt="Николай Тарасов" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <img src="./images/6.jpg" alt="Николай Тарасов" class="image" width="270">
+                    <h3 class="team-name">Николай Тарасов</h3>
+                    <p class="team-post">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/7.jpg" alt="Михаил Ермаков" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Михаил Ермаков</h3>
+                    <p class="team-post">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
-        <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" target="_blank" rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container2">
+            <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="logo2">Studio</span></a>
+            <address>
+                <ul class=list2>
+                    <li><a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" class="adress" target="_blank" rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="tel:+380991111111" class="contacts-list2">+38 099 111 11 11</a></li>
+                    <li><a href="mailto:info@example.com" class="contacts-list2">info@example.com</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
