--- a/portfolio.html
+++ b/portfolio.html
@@ -14,91 +14,89 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <nav class="navigation">
-            <a href="./portfolio.html"><span>Web</span>Studio</a>
-            <a href="./index.html">Студия</a>
-            <a href="./portfolio.html">Портфолио</a>
-            <a href="./portfolio.html">Контакты</a>
-        </nav>
-        <div class="contacts">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel.:+380961111111">+38 096 111 11 11</a>
+        <div class="container">
+            <nav class="navigation">
+                <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
+                <a href="./index.html" class="link">Студия</a>
+                <a href="./portfolio.html" class="link">Портфолио</a>
+                <a href="./index.html" class="link">Контакты</a>
+            </nav>
+            <div class="contacts">
+                <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+                <a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li>
+            </div>
         </div>
+
     </header>
     <main>
-        <section>
+        <section class="portfolio">
             <h1 class="hidden">/</h1>
             <div class="buttons">
                 <button class="btn" type="button">Все</button>
-                <button class="btn-navigation" type="button">Веб-сайты</button>
-                <button class="btn-navigation" type="button">Приложения</button>
-                <button class="btn-navigation" type="button">Дизайн</button>
-                <button class="btn-navigation" type="button">Маркетинг</button>
+                <button class="btn" type="button">Веб-сайты</button>
+                <button class="btn" type="button">Приложения</button>
+                <button class="btn" type="button">Дизайн</button>
+                <button class="btn" type="button">Маркетинг</button>
             </div>
             <ul class="portfolio-list">
                 <li>
-                    <img src="./images/img(9).jpg" alt="Технокряк" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p></li>
+                    <img src="./images/img(9).jpg" class="image" alt="Технокряк" width="370" height="294">
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="type">Веб-сайт</p></li>
                 <li>
-                    <img src="./images/img(1)(1).jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/img(1)(1).jpg" class="image"  alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="type">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/img(2)(1).jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="type">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/img(3)(1).jpg" alt="Проект Prime" width="370" height="294">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/img(3)(1).jpg" class="image" alt="Проект Prime" width="370" height="294">
+                    <h2 class="portfolio-title">Проект Prime</h2>
+                    <p class="type">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/img(4)(1).jpg" alt="Проект Boxes" width="370" height="294">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <img src="./images/img(4)(1).jpg" class="image" alt="Проект Boxes" width="370" height="294">
+                    <h2 class="portfolio-title">Проект Boxes</h2>
+                    <p class="type">Приложение</p>
                 </li>
                 <li>
                         <img src="./images/img(5)(1).jpg" alt="Inspiration has no Borders" width="370" height="294">
-                        <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                        <p class="type">Веб-сайт</p>
                 </li>        
                 <li>
-                    <img src="./images/img(6)(1).jpg" alt="Издание Limited Edition" width="370" height="294">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <img src="./images/img(6)(1).jpg" class="image" alt="Издание Limited Edition" width="370" height="294">
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p class="type">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/img(7)(1).jpg" alt="Проект LAB" width="370" height="294">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <img src="./images/img(7)(1).jpg" class="image" alt="Проект LAB" width="370" height="294">
+                    <h2 class="portfolio-title">Проект LAB</h2>
+                    <p class="type">Маркетинг</p>
                 </li>
                 <li>
                         <img src="./images/img(8)(1).jpg" alt="Growing Business" width="370" height="294">
-                        <h2>Growing Business</h2>
-                        <p>Приложение</p>
+                        <h2 class="portfolio-title">Growing Business</h2>
+                        <p class="type">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <address>
-            <ul class="contacts">
-                <li>
-                    <a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" target="_blank" rel="nofollow noopener noreferrer">г. Киев,
-                        пр-т Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111" class="phone">+38 099 111 11 11</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com" class="mail">info@example.com</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container2">
+            <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="logo2">Studio</span></a>
+            <address>
+                <ul class=list2>
+                    <li><a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" class="adress" target="_blank" rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="tel:+380991111111" class="contacts-list2">+38 099 111 11 11</a></li>
+                    <li><a href="mailto:info@example.com" class="contacts-list2">info@example.com</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
