--- a/portfolio.html
+++ b/portfolio.html
@@ -14,30 +14,31 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <div class="container">
-            <nav class="navigation">
-                <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
-                <a href="./index.html" class="link">Студия</a>
-                <a href="./portfolio.html" class="link">Портфолио</a>
-                <a href="./index.html" class="link">Контакты</a>
-            </nav>
-            <div class="contacts">
-                <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-                <a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li>
-            </div>
-        </div>
+        <nav class="navigation">
+            <ul class="container">
+                <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span
+                            class="mlogo">Studio</span></a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./index.html" class="link">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="contacts">
+            <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li>
+        </ul>
 
     </header>
     <main>
         <section class="portfolio">
             <h1 class="hidden">/</h1>
-            <div class="buttons">
-                <button class="btn" type="button">Все</button>
-                <button class="btn" type="button">Веб-сайты</button>
-                <button class="btn" type="button">Приложения</button>
-                <button class="btn" type="button">Дизайн</button>
-                <button class="btn" type="button">Маркетинг</button>
-            </div>
+            <ul class="buttons">
+                <li><button class="btn" type="button">Все</button></li>
+                <li><button class="btn" type="button">Веб-сайты</button></li>
+                <li><button class="btn" type="button">Приложения</button></li>
+                <li><button class="btn" type="button">Дизайн</button></li>
+                <li><button class="btn" type="button">Маркетинг</button></li>
+            </ul>
             <ul class="portfolio-list">
                 <li>
                     <img src="./images/img(9).jpg" class="image" alt="Технокряк" width="370" height="294">
