--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <div class="container">
-            <nav class="navigation">
-                <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
-                <a href="./index.html" class="link">Студия</a>
-                <a href="./portfolio.html" class="link">Портфолио</a>
-                <a href="./index.html" class="link">Контакты</a>
-            </nav>
-            <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
-            <a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li></div>
-        </div>
-
+         <nav class="navigation">
+            <ul class="container">
+                <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./index.html" class="link">Контакты</a></li>
+            </ul>
+        </nav>
+            <ul class="contacts">
+             <li><a href="mailto:info@devstudio.com" class="link current">info@devstudio.com</a></li>
+            <li><a href="tel.:+380961111111" class="link current">+38 096 111 11 11</a></li></ul>
+        
     </header>
     <main>
     <!--CTA-->
