--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <nav class="navigation">
             <ul class="container">
                 <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a></li>
-                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link active">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="./index.html" class="link">Контакты</a></li>
             </ul>
@@ -90,7 +90,8 @@
             <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="logo2">Studio</span></a>
             <address>
                 <ul class=list2>
-                    <li><a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" class="adress" target="_blank" rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="https://goo.gl/maps/3PV95evpAd6a5UV2A" class="adress" target="_blank"
+                            rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="tel:+380991111111" class="contacts-list2">+38 099 111 11 11</a></li>
                     <li><a href="mailto:info@example.com" class="contacts-list2">info@example.com</a></li>
                 </ul>
