--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span
                             class="mlogo">Studio</span></a></li>
                 <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./portfolio.html" class="link active">Портфолио</a></li>
                 <li><a href="./index.html" class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
         <section class="portfolio">
             <h1 class="hidden">/</h1>
             <ul class="buttons">
-                <li><button class="btn" type="button">Все</button></li>
+                <li><button class="btn1" type="button">Все</button></li>
                 <li><button class="btn" type="button">Веб-сайты</button></li>
                 <li><button class="btn" type="button">Приложения</button></li>
                 <li><button class="btn" type="button">Дизайн</button></li>
