--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
     <!-- Шапка сайта -->
     <header>
+        <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
+        
          <nav class="navigation">
             <ul class="container">
-                <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a></li>
                 <li><a href="./index.html" class="link active">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="./index.html" class="link">Контакты</a></li>
