--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,9 @@
 <body>
     <!-- Шапка сайта -->
     <header>
+        <a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span class="mlogo">Studio</span></a>
         <nav class="navigation">
             <ul class="container">
-                <li><a href="./index.html" class="main" lang="en"><span class="logo">Web</span><span
-                            class="mlogo">Studio</span></a></li>
                 <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="./portfolio.html" class="link active">Портфолио</a></li>
                 <li><a href="./index.html" class="link">Контакты</a></li>
